# FilesTools

./: .gitignore  CMakeLists.txt  GUI使用说明.md  Python客户端使用说明.md  README.md  UTF8编码支持说明.md  build-fallback.bat  build-vcpkg.bat  build-with-spdlog.bat  build.bat  file_transfer_client.py  file_transfer_gui.py  rebuild.bat  simple_test.py  test_client.cpp  test_client.py  test_file_transfer.py  test_folder_upload.py  test_proxy_client.py  vcpkg.json  启动GUI.bat  文件传输功能说明.md
downloads/: rsvp(2).h
include/: socket_server.h  vrc_proxy.h
src/: main.cpp  socket_server.cpp
test_folder/: README.md  test.txt
test_folder/subfolder/: subfile.txt
